# devcontainer-python-template

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  mise.toml  pyproject.toml  requirements.txt  ruff.toml  rumdl.toml  zensical.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: setup.sh
.github/: copilot-instructions.md
.github/instructions/: codeReview.instructions.md  commitMessageGeneration.instructions.md  pullRequestDescriptionGeneration.instructions.md
.github/workflows/: ci.yml
docs/dev/: index.md  resources.md
docs/dev/setup/: index.md
scripts/: setup.sh
src/: main.py
