[project]
name = "devcontainer-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "prek>=0.3.8",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.7",
  "ty>=0.0.24",
  "zensical>=0.0.29",
]
